drkns 14.11.2018 00:40:20 +0000 - build 5314

1. Уточнения обработки исключений.

2. Странные эффекты при закрытии FastFind мышью.

3. Уточнение 5304.

4. Рефакторинг.

zg 14.11.2018 20:28:30 +0200 - build 5313

1. gcc.

drkns 12.11.2018 23:59:59 +0000 - build 5312

1. Если определение кодовой страницы не удалось, но известно, что это точно не UTF-8/16 -
   будем использовать ANSI, даже если UTF-8/16 является умолчанием. Меньше вероятность порчи текста.

2. Пара мелочей.

drkns 10.11.2018 18:52:03 +0000 - build 5311

1. Т.к. SQLite не поддерживает вложенные транзакции, а используем мы их только для производительности -
   вложенные begin/end теперь игнорируются.

drkns 10.11.2018 00:09:59 +0000 - build 5310

1. Мелкие оптимизации сортировки файлов.

2. Рефакторинг.

w17 09.11.2018 14:25:26 +0300 - build 5309

1. GH #77 3.0.5300: Поломался Save file position в просмотровщике (F3)

drkns 09.11.2018 09:02:24 +0000 - build 5308

1. 5307 выявил древний баг - некорректное использование хендла.

drkns 08.11.2018 21:55:13 +0000 - build 5307

1. Уточнения создания и обработки исключений.

2. После 5304 в некоторых случаях ошибочно считалось, что профиль доступен только для чтения.

3. Рефакторинг.

drkns 08.11.2018 08:56:21 +0000 - build 5306

1. С форума: Far виснет при переводе системной даты на день назад
   Какой-то гений в MS реализовал sleep_for через sleep_until. *facepalm*

drkns 08.11.2018 00:26:26 +0000 - build 5305

1. Уточнения обработки исключений.

2. Повторные вызовы SCTL_CREATESUBKEY могли приводить к лишним выделениям памяти.

drkns 06.11.2018 20:35:22 +0000 - build 5304

1. Переделана работа с SQLite: теперь при неудаче вместо возврата false или кодов ошибок (которые мы почти нигде не проверяли)
   бросаются исключения. Они пока что перехватываются при открытии db (из-за всего сопутствующего этому процессу шаманства)
   и создании экземпляра настроек плагина (по понятным причинам), т.е. SCTL_CREATE, как и обещано, вернет FALSE в случае неудачи.