@@ -3,6 +3,10 @@ This file is a translation of the main russian changelog and is provided by volu
 It might not always be as up to date as the main changelog.
 =======================================================================================
 
+drkns 15.11.2018 00:53:53 +0000 - build 5315
+
+1. And once more.
+
 drkns 14.11.2018 00:40:20 +0000 - build 5314
 
 1. Some improvements in exception handling.
